--- a/index.html
+++ b/index.html
@@ -113,32 +113,32 @@
 	<!-- End Navigation -->
 
 	<!-- Image Carousel -->
-	<div id="carousel1" class="carousel slide carousel-fade" data-interval="4000" data-ride="carousel">
-		<ol class="carousel-indicators">
+	<div id="carousel1" class="carousel slide carousel-fade" data-interval="40000" data-ride="carousel">
+		<!-- <ol class="carousel-indicators">
 			<li data-target="#carousel1" data-slide-to="0" class="active"></li>
 			<li data-target="#carousel1" data-slide-to="1"></li>
 			<li data-target="#carousel1" data-slide-to="2"></li>
-		</ol>
+		</ol> -->
 		<div class="carousel-inner">
 			<div class="carousel-item active">
 				<img src="img/carousel/mainslide-01.jpg" class="d-block w-100" alt="First slide">
 				<div class="carousel-caption d-none d-md-block">
-					<h5>First slide label</h5>
-					<p>Nulla vitae elit libero, a pharetra augue mollis interdum.</p>
+					<p>keeping you wired</p>
+					<h2>We’re the Current<br>Specialist</h2>
 				</div>
 			</div>
 			<div class="carousel-item">
 				<img src="img/carousel/mainslide-02.jpg" class="d-block w-100" alt="Second slide">
 				<div class="carousel-caption d-none d-md-block">
-					<h5>Second slide label</h5>
-					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+					<p>making our clients happier</p>
+					<h2>Best Services for<br>Your Family</h2>
 				</div>
 			</div>
 			<div class="carousel-item">
 				<img src="img/carousel/mainslide-03.jpg" class="d-block w-100" alt="Third slide">
 				<div class="carousel-caption d-none d-md-block">
-					<h5>Third slide label</h5>
-					<p>Praesent commodo cursus magna, vel scelerisque nisl consectetur.</p>
+					<p>we can light everything</p>
+					<h2>Nothing is<br>Impossible for Us</h2>
 				</div>
 			</div>
 		</div>
@@ -150,24 +150,47 @@
 			<span class="carousel-control-next-icon" aria-hidden="true"></span>
 			<span class="sr-only">Next</span>
 		</a>
+		<!-- Form -->
+		<!-- <form class="form-inline bg-dark">
+			<button class="bg-success text-light rounded-top border-0">Request Service Today</button>
+			<div class="form-group m-3">
+				<input type="text" class="form-control text-center mx-2" id="YourName" placeholder="Your Name">
+				<input type="text" size="" class="form-control text-center mx-2" id="staticEmail2"
+					value="email@example.com">
+				<input type="tel" class="form-control text-center mx-2" id="YourPhone" placeholder="Your Phone"
+					pattern="[0-9]{3}-[0-9]{2}-[0-9]{3}" required>
+				<input type="date" name="your-date" value="" size="" class="form-control text-center mx-2"
+					aria-required="true" aria-invalid="false" placeholder="Date">
+				<button type="submit" class="btn px-5 btn-success mx-2">Get Service</button>
+			</div>
+		</form> -->
+
+		<div class="navbar navbar-expand-lg navbar-dark bg-dark py-3">
+			<div class="container">
+				<button class="navbar-toggler bg-success text-light rounded-top border-0 p-3" type="button"
+					data-toggle="collapse" data-target="#RequestService" aria-controls="RequestService"
+					aria-expanded="false" aria-label="Toggle navigation">Request Service Today <i
+						class="fas fa-angle-double-down mx-3"></i>
+				</button>
+				<div class="collapse navbar-collapse" id="RequestService">
+					<ul class="navbar-nav form-group myform">
+						<input type="text" class="form-control text-center m-2" id="YourName" placeholder="Your Name">
+						<input type="text" size="" class="form-control text-center m-2" id="staticEmail2"
+							value="email@example.com">
+						<input type="tel" class="form-control text-center m-2" id="YourPhone" placeholder="Your Phone"
+							pattern="[0-9]{3}-[0-9]{2}-[0-9]{3}" required>
+						<input type="date" name="your-date" value="" size="" class="form-control text-center mx-2"
+							aria-required="true" aria-invalid="false" placeholder="Date">
+					</ul>
+					<button type="submit" class="w-25 btn btn-success m-2 border-0">Get Service</button>
+				</div>
+			</div>
+		</div>
+		<!-- End Form -->
 
 	</div>
 	<!-- End Carousel Content -->
-	<!-- Form -->
-	<form class="form-inline bg-dark MForm">
-		<button class="bg-success text-light rounded-top FormTitle border-0 d-none">Request Service Today</button>
-		<div class="form-group m-3">
-			<input type="text" class="form-control text-center mx-2" id="YourName" placeholder="Your Name">
-			<input type="text" size="" class="form-control text-center mx-2" id="staticEmail2"
-				value="email@example.com">
-			<input type="tel" class="form-control text-center mx-2" id="YourPhone" placeholder="Your Phone"
-				pattern="[0-9]{3}-[0-9]{2}-[0-9]{3}" required>
-			<input type="date" name="your-date" value="" size="" class="form-control text-center mx-2"
-				aria-required="true" aria-invalid="false" placeholder="Date">
-			<button type="submit" class="btn px-5 btn-success mx-2">Get Service</button>
-		</div>
-	</form>
-	<!-- End Form -->
+
 
 
 
