--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
 	<title>HTML5 Website with Bootstrap | Responsive Website Design</title>
-	<link rel="shortcut icon" href="img/favicon.ico">
+	<link rel="shortcut icon" href="img/lightning.png">
 	<!-- Bootstrap 4.5 CSS -->
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<!-- Style CSS -->
@@ -142,47 +142,34 @@
 				</div>
 			</div>
 		</div>
-		<a class="carousel-control-prev" href="#carousel1" role="button" data-slide="prev">
+		<!-- <a class="carousel-control-prev" href="#carousel1" role="button" data-slide="prev">
 			<span class="carousel-control-prev-icon" aria-hidden="true"></span>
 			<span class="sr-only">Previous</span>
 		</a>
 		<a class="carousel-control-next" href="#carousel1" role="button" data-slide="next">
 			<span class="carousel-control-next-icon" aria-hidden="true"></span>
 			<span class="sr-only">Next</span>
-		</a>
+		</a> -->
 		<!-- Form -->
-		<!-- <form class="form-inline bg-dark">
-			<button class="bg-success text-light rounded-top border-0">Request Service Today</button>
-			<div class="form-group m-3">
-				<input type="text" class="form-control text-center mx-2" id="YourName" placeholder="Your Name">
-				<input type="text" size="" class="form-control text-center mx-2" id="staticEmail2"
-					value="email@example.com">
-				<input type="tel" class="form-control text-center mx-2" id="YourPhone" placeholder="Your Phone"
-					pattern="[0-9]{3}-[0-9]{2}-[0-9]{3}" required>
-				<input type="date" name="your-date" value="" size="" class="form-control text-center mx-2"
-					aria-required="true" aria-invalid="false" placeholder="Date">
-				<button type="submit" class="btn px-5 btn-success mx-2">Get Service</button>
-			</div>
-		</form> -->
-
 		<div class="navbar navbar-expand-lg navbar-dark bg-dark py-3">
-			<div class="container">
-				<button class="navbar-toggler bg-success text-light rounded-top border-0 p-3" type="button"
+			<div class="container justify-content-center">
+				<button class="navbar-toggler bg-success text-light rounded-top border-0 p-3 mb-2" type="button"
 					data-toggle="collapse" data-target="#RequestService" aria-controls="RequestService"
 					aria-expanded="false" aria-label="Toggle navigation">Request Service Today <i
 						class="fas fa-angle-double-down mx-3"></i>
 				</button>
 				<div class="collapse navbar-collapse" id="RequestService">
 					<ul class="navbar-nav form-group myform">
-						<input type="text" class="form-control text-center m-2" id="YourName" placeholder="Your Name">
-						<input type="text" size="" class="form-control text-center m-2" id="staticEmail2"
-							value="email@example.com">
-						<input type="tel" class="form-control text-center m-2" id="YourPhone" placeholder="Your Phone"
+						<input type="text" class="form-control" id="YourName" placeholder="Your Name">
+						<input type="text" size="" class="form-control" id="staticEmail2" value="email@example.com">
+						<input type="tel" class="form-control" id="YourPhone" placeholder="Your Phone"
 							pattern="[0-9]{3}-[0-9]{2}-[0-9]{3}" required>
-						<input type="date" name="your-date" value="" size="" class="form-control text-center mx-2"
-							aria-required="true" aria-invalid="false" placeholder="Date">
+						<input type="date" name="your-date" value="" size="" class="form-control" aria-required="true"
+							aria-invalid="false" placeholder="Date">
+						<button type="submit" class="btn btn-success form-control">Get
+							Service</button>
 					</ul>
-					<button type="submit" class="w-25 btn btn-success m-2 border-0">Get Service</button>
+
 				</div>
 			</div>
 		</div>
