--- a/index.html
+++ b/index.html
@@ -151,9 +151,9 @@
 			<span class="sr-only">Next</span>
 		</a> -->
 		<!-- Form -->
-		<div class="navbar navbar-expand-lg navbar-dark bg-dark py-3">
-			<div class="container justify-content-center">
-				<button class="navbar-toggler bg-success text-light rounded-top border-0 p-3 mb-2" type="button"
+		<div class="navbar navbar-expand-lg navbar-dark bg-dark py-3 container myform">
+			<div class="justify-content-center">
+				<button class="navbar-toggler bg-success text-light rounded-top border-0 p-3" type="button"
 					data-toggle="collapse" data-target="#RequestService" aria-controls="RequestService"
 					aria-expanded="false" aria-label="Toggle navigation">Request Service Today <i
 						class="fas fa-angle-double-down mx-3"></i>
@@ -187,7 +187,7 @@
 			<div class="row">
 				<div class="col-lg-6">
 					<img src="img/layout01-img01.jpg" id="img1" class="w-100" alt="">
-					<img src="img/layout01-img02.jpg" id="img2" class="w-75" alt="sign">
+					<img src="img/layout01-img02.jpg" id="img2" class="" alt="sign">
 				</div>
 				<div id="about" class="col-lg-6 mt-5 p-5">
 					<p class="text-success poppi font-weight-bold">About Us</p>
@@ -216,7 +216,6 @@
 				</div>
 			</div>
 		</div>
-
 	</section>
 	<!-- End Two Column Section -->
 
