--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 						<a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
 					</li>
 					<li class="nav-item">
-						<a class="nav-link" href="#">About Us</a>
+						<a class="nav-link" href="#AboutUs">About Us</a>
 					</li>
 					<li class="nav-item dropdown">
 						<a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
@@ -78,7 +78,7 @@
 							Services
 						</a>
 						<div class="dropdown-menu" aria-labelledby="navbarDropdown">
-							<a class="dropdown-item" href="#">Services Item 1</a>
+							<a class="dropdown-item" href="#OurServices">Responsive & Professional</a>
 							<a class="dropdown-item" href="#">Services Item 2</a>
 							<div class="dropdown-divider"></div>
 							<a class="dropdown-item" href="#">Something else here</a>
@@ -181,14 +181,14 @@
 	<!-- End Image Carousel -->
 
 	<!-- Two Column Section -->
-	<section class="" id="info">
+	<section class="" id="AboutUs">
 		<div class="container">
 			<div class="row">
 				<div class="col-lg-6">
 					<img src="img/layout01-img01.jpg" id="img1" class="w-100" alt="">
 					<img src="img/layout01-img02.jpg" id="img2" class="" alt="sign">
 				</div>
-				<div id="about" class="col-lg-6 mt-lg-5 p-lg-5">
+				<div class="col-lg-6 mt-lg-5 p-lg-5 topminus">
 					<p class="text-success poppi font-weight-bold">About Us</p>
 					<h3 class="poppi">Outstanding Residential & Commercial Services</h3>
 					<p class="text-muted"> All of our services are backed by our 100% satisfaction guarantee. Our
@@ -218,36 +218,224 @@
 	</section>
 	<!-- End Two Section Column -->
 	<!-- Three Section Column -->
-	<section>
-		<div class="row my-5">
-			<div class="col-lg-4 p-0 wrapper ">
-				<img src="img/slideinfo-01.jpg" class="w-100" alt="">
-				<img src="img/slideinfo-marker.png" class="ts-img" alt="">
-				<div class="ts-content overlay">
-					<h2 class="pt-5">Commercial</h2>
-					<div id="Show">
-						<p class="px-3">We offer the highest level of responsiveness and reliability, including
-							on-line
-							job management and reporting. Our highly experienced contractors across the nation
-							ensure
-							that your premises are always maintained and compliant.
-						</p>
+	<div class="wrapper my-5">
+		<div class="row">
+			<div class="onethird col-lg-4 p-0 current">
+				<img src="img/slideinfo-marker.png" alt="">
+				<div class="overlay">
+					<div class="content2">
+						<h2 class="">Commercial</h2>
+						<div class="Show">
+							<p class="px-3">We offer the highest level of responsiveness and reliability, including
+								on-line
+								job management and reporting. Our highly experienced contractors across the nation
+								ensure
+								that your premises are always maintained and compliant.
+							</p>
+						</div>
+						<button type="button" class="btn btn-success rounded-circle btnTogg mt-3"><i
+								class="fas fa-plus"></i>
+						</button>
 					</div>
-					<button type="button" class="btn btn-success rounded-circle  mt-3" id="btnTogg"><i
-							class="fas fa-plus"></i>
-					</button>
 				</div>
 			</div>
+			<div class="onethird col-lg-4 p-0 current">
+				<img src="img/slideinfo-marker.png" alt="">
+				<div class="overlay">
+					<div class="content2">
+						<h2 class="">Industrial</h2>
+						<div class="Show">
+							<p class="px-3">We offer the highest level of responsiveness and reliability, including
+								on-line
+								job management and reporting. Our highly experienced contractors across the nation
+								ensure
+								that your premises are always maintained and compliant.
+							</p>
+						</div>
+						<button type="button" class="btn btn-success rounded-circle btnTogg mt-3"><i
+								class="fas fa-plus"></i>
+						</button>
+					</div>
+				</div>
+			</div>
+			<div class="onethird col-lg-4 p-0 current">
+				<img src="img/slideinfo-marker.png" alt="">
+				<div class="overlay">
+					<div class="content2">
+						<h2 class="">Residential</h2>
+						<div class="Show">
+							<p class="px-3">We offer the highest level of responsiveness and reliability, including
+								on-line
+								job management and reporting. Our highly experienced contractors across the nation
+								ensure
+								that your premises are always maintained and compliant.
+							</p>
+						</div>
+						<button type="button" class="btn btn-success rounded-circle btnTogg mt-3"><i
+								class="fas fa-plus"></i>
+						</button>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+	<!--End Three Section Column -->
+	<!-- Services  -->
+	<section class="" id="OurServices">
+		<div class="container">
+			<div class="row">
+				<div class="col-lg-7">
+					<img src="img/layout01-img05-717x491.jpg" class="w-100" alt="">
+				</div>
+				<div id="" class="col-lg-5 mt-lg-5 pl-lg-5 pt-lg-4 topminus">
+					<p class="text-success poppi font-weight-bold">Our Services</p>
+					<h3 class="poppi">Responsive & Professional</h3>
+					<p class="text-muted"> We go the extra mile on every project. The value we provide clients comes
+						from our level of skill and performance, as well as our knowledge and professionalism. Rest
+						assured, we put the same level of energy into every project we take on.</p>
+					<div class="align-items-center">
+						<p class="poppi font-weight-bold">Call us today</p>
+						<h5 class="poppi text-success font-weight-bold"><i class="fas fa-phone text-success mr-3"></i>
+							1-(800)-765-43-21
+						</h5>
+						<p class="poppi">We’re available 24/7, 365 days a year.</p>
+					</div>
+				</div>
+			</div>
+			<div class="my-5">
+				<div class="row">
+					<h2 class="m-auto p-3">What We Offer</h2>
+					<div class="col-md-12 d-flex justify-content-center mb-5">
+						<button type="button" class="btn poppi font-weight-bold waves-effect filter active"
+							data-rel="all">All</button>
+						<button type="button" class="btn poppi font-weight-bold waves-effect filter"
+							data-rel="1">Commercial Services</button>
+						<button type="button" class="btn poppi font-weight-bold waves-effect filter"
+							data-rel="2">Industrial Services</button>
+						<button type="button" class="btn poppi font-weight-bold waves-effect filter"
+							data-rel="3">Residential Services</button>
+					</div>
+				</div>
+
+				<div class="gallery" id="gallery">
+					<div class="row">
+						<figure class="col-lg-4 col-md-6 animation all 1">
+							<img class="w-100" src="img/gallery/obj-img01.jpg" alt="Card image cap">
+							<figcaption class="">
+								<h5 class="poppi font-weight-bold">Electrical Repairs</h5>
+								<p class="poppi">Electrical repairs should always be handled by a professional
+									electrician.</p>
+								<a href="" class="poppi">Read more
+									<i class="fas fa-chevron-right text-primary ml-1"></i>
+								</a>
+							</figcaption>
+						</figure>
+						<figure class="col-lg-4 col-md-6 animation all 2">
+							<img class="w-100" src="img/gallery/obj-img02.jpg" alt="Card image cap">
+							<figcaption class="">
+								<h5 class="poppi font-weight-bold">Panel Upgrades</h5>
+								<p class="poppi">Electrical panel maintenance, therefore, should be part of your
+									regular
+									routine.</p>
+								<a href="" class="poppi">Read more
+									<i class="fas fa-chevron-right text-primary ml-1"></i>
+								</a>
+							</figcaption>
+						</figure>
+						<figure class="col-lg-4 col-md-6 animation all 3">
+							<img class="w-100" src="img/gallery/obj-img03.jpg" alt="Card image cap">
+							<figcaption class="">
+								<h5 class="poppi font-weight-bold">Lighting Upgrades</h5>
+								<p class="poppi">Lighting can enhance and change the mood, the look and feel of any
+									room
+									or space.</p>
+								<a href="" class="poppi">Read more
+									<i class="fas fa-chevron-right text-primary ml-1"></i>
+								</a>
+							</figcaption>
+						</figure>
+						<figure class="col-lg-4 col-md-6 animation all 1">
+							<img class="w-100" src="img/gallery/obj-img04.jpg" alt="Card image cap">
+							<figcaption class="">
+								<h5 class="poppi font-weight-bold">Surge Protection</h5>
+								<p class="poppi">An electrical surge can happen for a number of reasons, including
+									lightning strikes.</p>
+								<a href="" class="poppi">Read more
+									<i class="fas fa-chevron-right text-primary ml-1"></i>
+								</a>
+							</figcaption>
+						</figure>
+						<figure class="col-lg-4 col-md-6 animation all 2">
+							<img class="w-100" src="img/gallery/obj-img05.jpg" alt="Card image cap">
+							<figcaption class="">
+								<h5 class="poppi font-weight-bold">Install a Ceiling Fan</h5>
+								<p class="poppi">If you need a ceiling fan installed, repaired, or updated, our
+									electricians are ready to help you.</p>
+								<a href="" class="poppi">Read more
+									<i class="fas fa-chevron-right text-primary ml-1"></i>
+								</a>
+							</figcaption>
+						</figure>
+						<figure class="col-lg-4 col-md-6 animation all 1">
+							<img class="w-100" src="img/gallery/obj-img06.jpg" alt="Card image cap">
+							<figcaption class="">
+								<h5 class="poppi font-weight-bold">Surge Protection</h5>
+								<p class="poppi">An electrical surge can happen for a number of reasons, including
+									lightning strikes.</p>
+								<a href="" class="poppi">Read more
+									<i class="fas fa-chevron-right text-primary ml-1"></i>
+								</a>
+							</figcaption>
+						</figure>
+						<figure class="col-lg-4 col-md-6 animation all 1">
+							<img class="w-100" src="img/gallery/obj-img07.jpg" alt="Card image cap">
+							<figcaption class="">
+								<h5 class="poppi font-weight-bold">Outdoor and Motion Lighting</h5>
+								<p class="poppi">Outdoor Lighting can transform your outdoor living space completely.
+								</p>
+								<a href="" class="poppi">Read more
+									<i class="fas fa-chevron-right text-primary ml-1"></i>
+								</a>
+							</figcaption>
+						</figure>
+						<figure class="col-lg-4 col-md-6 animation all 2">
+							<img class="w-100" src="img/gallery/obj-img08.jpg" alt="Card image cap">
+							<figcaption class="">
+								<h5 class="poppi font-weight-bold">Digital Thermostat Installation</h5>
+								<p class="poppi">Give us a call to plan your Digital Thermostat Installation today.</p>
+								<a href="" class="poppi">Read more
+									<i class="fas fa-chevron-right text-primary ml-1"></i>
+								</a>
+							</figcaption>
+						</figure>
+						<figure class="col-lg-4 col-md-6 animation all 3">
+							<img class="w-100" src="img/gallery/obj-img09.jpg" alt="Card image cap">
+							<figcaption class="">
+								<h5 class="poppi font-weight-bold">Baseboard Heating Installation</h5>
+								<p class="poppi">Baseboard heaters are one of the easiest systems to operate.</p>
+								<a href="" class="poppi">Read more
+									<i class="fas fa-chevron-right text-primary ml-1"></i>
+								</a>
+							</figcaption>
+						</figure>
+					</div>
+
+				</div>
 
 
 
-
-
-
-
+				<!-- Grid row -->
+			</div>
+		</div>
 		</div>
 
 	</section>
+
+	<!--End Services (Carousel with Multiple items per slide) -->
+
+
+
+
 
 
 	<!-- End of Three Section Column -->
@@ -317,13 +505,33 @@
 			document.documentElement.scrollTop = 0;
 		}
 	</script>
+	<!-- Script three section column -->
 	<script type="text/javascript">
 		$(document).ready(function () {
-			$("#btnTogg").click(function () {
-				$("#Show").toggle();
+			$(".btnTogg").click(function () {
+				$(".Show").toggle();
 			});
 		});
 	</script>
+
+
+	<!--Gallery with filter -->
+	<script>
+		$(function () {
+			var selectedClass = "";
+			$(".filter").click(function () {
+				selectedClass = $(this).attr("data-rel");
+				$("#gallery").fadeTo(100, 0.1);
+				$("#gallery figure").not("." + selectedClass).fadeOut().removeClass('animation');
+				setTimeout(function () {
+					$("." + selectedClass).fadeIn().addClass('animation');
+					$("#gallery").fadeTo(300, 1);
+				}, 300);
+			});
+		});
+	</script>
+
+
 
 </body>
 
