Modal form button

--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
 	</section>
 	<!-- End Two Section Column -->
 	<!-- Three Section Column -->
-	<div class="wrapper my-5">
+	<div class="wrapper">
 		<div class="row">
 			<div class="onethird col-lg-4 p-0 current">
 				<img src="img/slideinfo-marker.png" alt="">
@@ -281,7 +281,7 @@
 	</div>
 	<!--End Three Section Column -->
 	<!-- Services  -->
-	<section class="" id="OurServices">
+	<section class="my-5" id="OurServices">
 		<div class="container">
 			<div class="row">
 				<div class="col-lg-7">
@@ -306,7 +306,7 @@
 				<div class="row">
 					<h2 class="m-auto p-3">What We Offer</h2>
 					<div class="col-md-12 d-flex justify-content-center mb-5">
-						<button type="button" class="btn poppi font-weight-bold waves-effect filter active"
+						<button type="button" class="btn poppi font-weight-bold waves-effect filter"
 							data-rel="all">All</button>
 						<button type="button" class="btn poppi font-weight-bold waves-effect filter"
 							data-rel="1">Commercial Services</button>
@@ -325,8 +325,8 @@
 								<h5 class="poppi font-weight-bold">Electrical Repairs</h5>
 								<p class="poppi">Electrical repairs should always be handled by a professional
 									electrician.</p>
-								<a href="" class="poppi">Read more
-									<i class="fas fa-chevron-right text-primary ml-1"></i>
+								<a href="" class="poppi text-dark">Read more
+									<i class="fas fa-chevron-right text-success ml-1"></i>
 								</a>
 							</figcaption>
 						</figure>
@@ -337,8 +337,8 @@
 								<p class="poppi">Electrical panel maintenance, therefore, should be part of your
 									regular
 									routine.</p>
-								<a href="" class="poppi">Read more
-									<i class="fas fa-chevron-right text-primary ml-1"></i>
+								<a href="" class="poppi text-dark">Read more
+									<i class="fas fa-chevron-right text-success ml-1"></i>
 								</a>
 							</figcaption>
 						</figure>
@@ -349,8 +349,8 @@
 								<p class="poppi">Lighting can enhance and change the mood, the look and feel of any
 									room
 									or space.</p>
-								<a href="" class="poppi">Read more
-									<i class="fas fa-chevron-right text-primary ml-1"></i>
+								<a href="" class="poppi text-dark">Read more
+									<i class="fas fa-chevron-right text-success ml-1"></i>
 								</a>
 							</figcaption>
 						</figure>
@@ -360,8 +360,8 @@
 								<h5 class="poppi font-weight-bold">Surge Protection</h5>
 								<p class="poppi">An electrical surge can happen for a number of reasons, including
 									lightning strikes.</p>
-								<a href="" class="poppi">Read more
-									<i class="fas fa-chevron-right text-primary ml-1"></i>
+								<a href="" class="poppi text-dark">Read more
+									<i class="fas fa-chevron-right text-success ml-1"></i>
 								</a>
 							</figcaption>
 						</figure>
@@ -371,8 +371,8 @@
 								<h5 class="poppi font-weight-bold">Install a Ceiling Fan</h5>
 								<p class="poppi">If you need a ceiling fan installed, repaired, or updated, our
 									electricians are ready to help you.</p>
-								<a href="" class="poppi">Read more
-									<i class="fas fa-chevron-right text-primary ml-1"></i>
+								<a href="" class="poppi text-dark">Read more
+									<i class="fas fa-chevron-right text-success ml-1"></i>
 								</a>
 							</figcaption>
 						</figure>
@@ -382,8 +382,8 @@
 								<h5 class="poppi font-weight-bold">Surge Protection</h5>
 								<p class="poppi">An electrical surge can happen for a number of reasons, including
 									lightning strikes.</p>
-								<a href="" class="poppi">Read more
-									<i class="fas fa-chevron-right text-primary ml-1"></i>
+								<a href="" class="poppi text-dark">Read more
+									<i class="fas fa-chevron-right text-success ml-1"></i>
 								</a>
 							</figcaption>
 						</figure>
@@ -391,10 +391,10 @@
 							<img class="w-100" src="img/gallery/obj-img07.jpg" alt="Card image cap">
 							<figcaption class="">
 								<h5 class="poppi font-weight-bold">Outdoor and Motion Lighting</h5>
-								<p class="poppi">Outdoor Lighting can transform your outdoor living space completely.
+								<p class="poppi">Outdoor Lighting can transform your living space completely.
 								</p>
-								<a href="" class="poppi">Read more
-									<i class="fas fa-chevron-right text-primary ml-1"></i>
+								<a href="" class="poppi text-dark">Read more
+									<i class="fas fa-chevron-right text-success ml-1"></i>
 								</a>
 							</figcaption>
 						</figure>
@@ -403,8 +403,8 @@
 							<figcaption class="">
 								<h5 class="poppi font-weight-bold">Digital Thermostat Installation</h5>
 								<p class="poppi">Give us a call to plan your Digital Thermostat Installation today.</p>
-								<a href="" class="poppi">Read more
-									<i class="fas fa-chevron-right text-primary ml-1"></i>
+								<a href="" class="poppi text-dark">Read more
+									<i class="fas fa-chevron-right text-success ml-1"></i>
 								</a>
 							</figcaption>
 						</figure>
@@ -413,25 +413,62 @@
 							<figcaption class="">
 								<h5 class="poppi font-weight-bold">Baseboard Heating Installation</h5>
 								<p class="poppi">Baseboard heaters are one of the easiest systems to operate.</p>
-								<a href="" class="poppi">Read more
-									<i class="fas fa-chevron-right text-primary ml-1"></i>
+								<a href="" class="poppi text-dark">Read more
+									<i class="fas fa-chevron-right text-success ml-1"></i>
 								</a>
 							</figcaption>
 						</figure>
 					</div>
 
 				</div>
-
-
-
-				<!-- Grid row -->
 			</div>
-		</div>
-		</div>
 
+
+			<!-- Button trigger modal -->
+			<div class="row">
+				<button type="button" class="btn btn-success my-5 mx-auto py-2 px-3" data-toggle="modal"
+					data-target="#formModal">
+					<span><i class="fas fa-bolt text-white mr-2"></i></span> Shedule for Service
+				</button>
+			</div>
+			<!-- Modal -->
+			<div class="modal fade" id="formModal" tabindex="-1" aria-labelledby="formModalLabel" aria-hidden="true">
+				<div class="modal-dialog">
+					<div class="modal-content">
+						<div class="modal-header">
+							<h3 class="modal-title text-lg-center poppi" id="formModalLabel">Make an Appointment</h3>
+							<button type="button" class="close" data-dismiss="modal" aria-label="Close">
+								<span aria-hidden="true">&times;</span>
+							</button>
+						</div>
+						<div class="modal-body">
+							<form action="" class="mx-3">
+								<input type="text" name="name" placeholder="Your Name"
+									class="border border-muted w-100 m-3 p-2" />
+								<input type="email" name="e-mail" placeholder="Your E-mail Adress"
+									class="border border-muted w-100 m-3 p-2" />
+								<input type="tel" name="phone" placeholder="Your Phone Number"
+									class="border border-muted w-100 m-3 p-2" />
+								<input type="date" name="your-date" value="" size=""
+									class="border border-muted w-100 m-3 p-2" aria-required="true" aria-invalid="false"
+									placeholder="Date">
+								<textarea name="text" id="" rows="4" placeholder="Your Message"
+									class="border border-muted w-100 m-3 p-2"></textarea>
+							</form>
+						</div>
+						<div class="modal-footer">
+							<button type="button" class="btn btn-light" data-dismiss="modal">Close</button>
+							<button type="button" class="btn btn-success">Explore services</button>
+						</div>
+					</div>
+				</div>
+			</div>
+
+
+		</div>
 	</section>
 
-	<!--End Services (Carousel with Multiple items per slide) -->
+	<!--End Services -->
 
 
 
